fix spacing below embeddable video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,12 +379,6 @@ footer {
   .Post .Post-Header {
     text-align: center;
     margin-bottom: 2.66667em; }
-  .Post p + h1, .Post pre + h1, .Post iframe + h1 {
-    margin-top: 0.33333em; }
-  .Post p + h2, .Post pre + h2, .Post iframe + h2 {
-    margin-top: 1em; }
-  .Post p + h3, .Post p + h4, .Post p + h5, .Post pre + h3, .Post pre + h4, .Post pre + h5, .Post iframe + h3, .Post iframe + h4, .Post iframe + h5 {
-    margin-top: 1.66667em; }
   .Post .tweetblock {
     margin-top: 1.33333em;
     margin-bottom: 1.33333em; }
@@ -459,6 +453,13 @@ footer {
     left: 0;
     width: 100%;
     height: 100%; }
+
+.Post p + h1, .Post pre + h1, .Post iframe + h1, .Post + h1, .Post-Embedded-content p + h1, .Post-Embedded-content pre + h1, .Post-Embedded-content iframe + h1, .Post-Embedded-content + h1 {
+  margin-top: 0.33333em; }
+.Post p + h2, .Post pre + h2, .Post iframe + h2, .Post + h2, .Post-Embedded-content p + h2, .Post-Embedded-content pre + h2, .Post-Embedded-content iframe + h2, .Post-Embedded-content + h2 {
+  margin-top: 1em; }
+.Post p + h3, .Post p + h4, .Post p + h5, .Post pre + h3, .Post pre + h4, .Post pre + h5, .Post iframe + h3, .Post iframe + h4, .Post iframe + h5, .Post + h3, .Post + h4, .Post + h5, .Post-Embedded-content p + h3, .Post-Embedded-content p + h4, .Post-Embedded-content p + h5, .Post-Embedded-content pre + h3, .Post-Embedded-content pre + h4, .Post-Embedded-content pre + h5, .Post-Embedded-content iframe + h3, .Post-Embedded-content iframe + h4, .Post-Embedded-content iframe + h5, .Post-Embedded-content + h3, .Post-Embedded-content + h4, .Post-Embedded-content + h5 {
+  margin-top: 1.66667em; }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px), (min-width: 320px) and (max-width: 768px) {
   .Bottom .left {
