--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -6,17 +6,6 @@
     margin-bottom: emRhythm(8); 
   }
 
-  p, pre, iframe {
-    & + h1 {
-      margin-top: emRhythm(1);
-    }
-    & + h2 {
-      margin-top: emRhythm(3);
-    }
-    & + h3, & + h4, & + h5 {
-      margin-top: emRhythm(5);
-    }
-  }
   // h1, .h1 {
   //   margin-bottom: emRhythm(4, $ms-up2);
   //   @include setType(6, $ms-up2);
@@ -134,15 +123,20 @@
     width: 100%; 
     height: 100%;
   }
+}
 
-  & + h1 {
-    margin-top: emRhythm(1);
-  }
-  & + h2 {
-    margin-top: emRhythm(3);
-  }
-  & + h3, & + h4, & + h5 {
-    margin-top: emRhythm(5);
+
+.Post, .Post-Embedded-content {
+  p, pre, iframe, & {
+    & + h1 {
+      margin-top: emRhythm(1);
+    }
+    & + h2 {
+      margin-top: emRhythm(3);
+    }
+    & + h3, & + h4, & + h5 {
+      margin-top: emRhythm(5);
+    }
   }
 }
 
